--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,9 @@
+.error {
+  padding: 0.5rem;
+  color: red;
+  font-weight: bold;
+}
+
 .text-field {
     margin-bottom: 1rem;
   }
@@ -12,6 +18,7 @@
     width: 10%;
     height: calc(2.25rem + 2px);
     padding: 0.375rem 0.75rem;
+    margin-bottom: 10px;
     font-family: inherit;
     font-size: 1rem;
     font-weight: 400;
@@ -37,18 +44,19 @@
     position: relative;
     border: 1px solid rgba(255, 255, 255, 0.5);
     outline: none;
-    display: inline-block;
+    display: block;
     overflow: hidden;
     text-align: center;
     text-decoration: none;
-    text-transform: uppercase;
+    text-transform: uppercase;                        
     cursor: pointer;
     font-size: 16px;
+    width: 100px;
     padding: 12px 16px;
     color: #fff;
     background-color: skyblue;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-    margin: 12px;
+    margin: 8px;
   }
   
   .button:active {
